2007-08-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Raise new errors if |base| is following
	URI attributes or hyperlink attributes.

2007-08-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Support for |noscript| in |head|.  Make an
	error for |noscript| in XML document.

2007-08-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm ($HTMLURIsAttrChecker): Syntax of error |type|
	value are changed for the ease of error message catalog
	lookup.

2007-08-05  Wakaba  <wakaba@suika.fam.cx>

	* Atom.pm: |link|-related checks are added; |type|
	media type checks are added.  |hreflang| now warns
	as unimplemented.

2007-08-05  Wakaba  <wakaba@suika.fam.cx>

	* Atom.pm: Checker for all elements are defined (with
	a number of "TODO"s).

2007-08-05  Wakaba  <wakaba@suika.fam.cx>

	* Atom.pm: New Perl module.

2007-08-04  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: New Perl module, split from |Whatpm/ContentChecker.pm|.

	* ChangeLog: New file.