@@ -1,7 +1,7 @@
 1..337
 # Running under perl version 5.008007 for linux
-# Current time local: Fri Aug 17 16:05:20 2007
-# Current time GMT:   Fri Aug 17 07:05:20 2007
+# Current time local: Sat Aug 25 11:39:00 2007
+# Current time GMT:   Sat Aug 25 02:39:00 2007
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
