@@ -1,7 +1,7 @@
 1..774
 # Running under perl version 5.008007 for linux
-# Current time local: Fri Aug 17 16:05:28 2007
-# Current time GMT:   Fri Aug 17 07:05:28 2007
+# Current time local: Sat Aug 25 11:39:03 2007
+# Current time GMT:   Sat Aug 25 02:39:03 2007
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
@@ -1277,3 +1277,13 @@ ok 967
 ok 968
 ok 969
 ok 970
+ok 971
+ok 972
+ok 973
+ok 974
+ok 975
+ok 976
+ok 977
+ok 978
+ok 979
+ok 980
