@@ -1,3 +1,12 @@
+2007-08-25  Wakaba  <wakaba@suika.fam.cx>
+
+	* content-model-1.dat: New tests for |meta| corner cases
+	are added.
+
+2007-08-22  Wakaba  <wakaba@suika.fam.cx>
+
+	* tree-test-2.dat: New tests for |html| innerHTML are added.
+
 2007-08-17  Wakaba  <wakaba@suika.fam.cx>
 
 	* content-model-2.dat: New tests for |base| 
