@@ -1,3 +1,8 @@
+2007-08-25  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm (head, noscript): Treatement for invalid |meta|
+	elenments are changed as per HTML5 revision 1018.
+
 2007-08-17  Wakaba  <wakaba@suika.fam.cx>
 
 	* HTML.pm: Raise new errors if |base| is following
